--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "ethers": "5.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
+    "styled-components": "5.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
