--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "3.4.11",
+    "@ensdomains/web3modal": "1.9.4",
+    "@myetherwallet/mewconnect-web-client": "2.2.0-beta.13",
+    "@portis/web3": "4.0.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@toruslabs/torus-embed": "1.13.3",
+    "@walletconnect/web3-provider": "1.6.5",
     "ethers": "5.4.6",
     "graphql": "15.5.3",
     "react": "^17.0.2",
@@ -14,6 +19,7 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "5.3.1",
+    "walletlink": "2.1.11",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
