--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "ENS Team (@ensdomains)",
   "dependencies": {
     "@apollo/client": "3.4.11",
-    "@ensdomains/ui": "3.3.4",
     "@ensdomains/web3modal": "1.9.4",
     "@myetherwallet/mewconnect-web-client": "2.2.0-beta.13",
     "@portis/web3": "4.0.5",
@@ -28,8 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "deploy": "yarn build && cp _headers ./build/_headers",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "deploy": "DISABLE_ESLINT_PLUGIN=true yarn build && cp _headers ./build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
