basic snapshot voting

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@ensdomains/web3modal": "1.9.4",
     "@myetherwallet/mewconnect-web-client": "2.2.0-beta.13",
     "@portis/web3": "4.0.5",
+    "@snapshot-labs/snapshot.js": "0.2.9",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
