--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-scripts": "4.0.3",
     "styled-components": "5.3.1",
     "walletlink": "2.1.11",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@ethersproject/bytes": "latest",
+    "@ethersproject/bytes": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
