--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@myetherwallet/mewconnect-web-client": "2.2.0-beta.13",
     "@portis/web3": "4.0.5",
     "@snapshot-labs/snapshot.js": "0.2.9",
+    "@synthetixio/synpress": "0.9.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -34,7 +35,8 @@
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "deploy": "DISABLE_ESLINT_PLUGIN=true yarn build && cp _headers ./build && cp _redirects ./build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "e2e": "synpress run"
   },
   "eslintConfig": {
     "extends": [
