--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & wait-on http://localhost:3000",
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "deploy": "DISABLE_ESLINT_PLUGIN=true yarn build && cp _headers ./build && cp _redirects ./build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cy:open": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress open"
+    "cy:open": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de"
   },
   "eslintConfig": {
     "extends": [
