--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -16,7 +16,7 @@ jobs:
       - run: yarn install
       - run: yarn global add wait-on
       - run: yarn start &
-      - run: yarn cy:open
+      - run: yarn cy:ci
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
 #      - name: Cypress run
