--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "deploy": "DISABLE_ESLINT_PLUGIN=true yarn build && cp _headers ./build && cp _redirects ./build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cy:open": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de"
+    "cy:ci": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de",
+    "cy:open": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress open"
   },
   "eslintConfig": {
     "extends": [
