--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -20,9 +20,9 @@ jobs:
         uses: browser-actions/setup-chrome@latest
       - run: chrome --version
       - run: yarn install
-      - run: yarn global add wait-on
-      - run: yarn start &
-      - run: yarn cy:ci
+      - run: yarn build
+      - run: yarn serve &
+      - run: yarn cypress:ci
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
 #      - name: Cypress run
