--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "serve": "serve -s build",
     "deploy": "DISABLE_ESLINT_PLUGIN=true yarn build && cp _headers ./build && cp _redirects ./build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:ci": "react-scripts start & wait-on http://localhost:3000",
-    "cy:ci": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de",
-    "cy:open": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress open"
+    "cypress:ci": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de",
+    "cypress:open": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -59,7 +59,9 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "1.13.2",
+    "concurrently": "6.3.0",
     "cypress": "8.6.0",
-    "cypress-metamask": "1.0.5-development"
+    "cypress-metamask": "1.0.5-development",
+    "serve": "12.0.1"
   }
 }
