use @ensdomains/cypress-metamask

--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
     ]
   },
   "devDependencies": {
+    "@ensdomains/cypress-metamask": "1.1.0-development",
     "babel-plugin-styled-components": "1.13.2",
     "concurrently": "6.3.0",
     "cypress": "8.6.0",
-    "cypress-metamask": "1.0.5-development",
     "serve": "12.0.1"
   }
 }
