--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "keccak256": "1.0.3",
     "merkletreejs": "0.2.24",
     "react": "^17.0.2",
+    "react-confetti": "6.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
+    "react-use": "17.3.1",
     "styled-components": "5.3.1",
     "walletlink": "2.1.11",
     "web-vitals": "^1.0.1"
