--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cypress:ci": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de",
-    "cypress:open": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress open"
+    "cypress:open": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress open",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -64,7 +65,9 @@
     "babel-plugin-styled-components": "1.13.2",
     "concurrently": "6.3.0",
     "cypress": "8.6.0",
+    "husky": "^7.0.0",
     "prettier": "2.4.1",
+    "pretty-quick": "3.1.1",
     "serve": "12.0.1"
   }
 }
