--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -21,7 +21,7 @@ jobs:
       - run: chrome --version
       - run: yarn install
       - run: yarn build
-      - run: yarn serve &
+      - run: yarn serve -l 3000 &
       - run: yarn cypress:ci
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
