--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "babel-plugin-styled-components": "1.13.2",
     "concurrently": "6.3.0",
     "cypress": "8.7.0",
+    "cypress-promise": "1.1.0",
     "husky": "^7.0.0",
     "prettier": "2.4.1",
     "pretty-quick": "3.1.1",
