--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@toruslabs/torus-embed": "1.13.3",
     "@walletconnect/web3-provider": "1.6.5",
+    "bitski": "^0.11.0-beta.5",
     "ethers": "5.4.6",
     "graphql": "15.5.3",
     "js-sha3": "0.8.0",
