--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -12,6 +12,7 @@ jobs:
       RPC_URL: ${{ secrets.DUMMY_RPC_URL }}
       CHAIN_ID: 1
       CYPRESS_TENDERLY_KEY: ${{ secrets.CYPRESS_TENDERLY_KEY }}
+      CYPRESS_TENDERLY_PROJECT: ${{ secrets.CYPRESS_TENDERLY_PROJECT }}
     steps:
       - run: sudo apt-get install xvfb
       - run: sudo apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
