--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "start": "react-scripts start",
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "serve": "serve -s build",
-    "deploy": "DISABLE_ESLINT_PLUGIN=true yarn build && cp _headers ./build && cp _redirects ./build",
+    "deploy": "DISABLE_ESLINT_PLUGIN=true yarn build && cp _headers ./build && cp _redirects ./build && rm ./build/airdrops/testing",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cypress:ci": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de",
