--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
     "deploy": "DISABLE_ESLINT_PLUGIN=true yarn build && cp _headers ./build && cp _redirects ./build && rm ./build/airdrops/testing",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress:ci": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de",
-    "cypress:ci:win": "set CYPRESS_REMOTE_DEBUGGING_PORT=9222 && cypress run --headed --browser chrome --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de",
-    "cypress:ci:local": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome",
-    "cypress:ci:local:win": "set CYPRESS_REMOTE_DEBUGGING_PORT=9222 && cypress run --headed --browser chrome",
+    "cypress:ci:all": "cypress run --headed --browser chrome",
+    "cypress:ci:testSpec": "yarn run cypress:ci:all --spec ./cypress/integration/testSpec.spec.js",
+    "cypress:ci:ep2TestSpec": "yarn run cypress:ci:all --spec ./cypress/integration/ep2TestSpec.spec.js",
+    "cypress:ci": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 yarn run cypress:ci:testSpec --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de && yarn run cypress:ci:ep2TestSpec --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de",
+    "cypress:ci:win": "set CYPRESS_REMOTE_DEBUGGING_PORT=9222 && yarn run cypress:ci:testSpec --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de && yarn run cypress:ci:ep2TestSpec --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de",
+    "cypress:ci:local": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 yarn run cypress:ci:testSpec && yarn run cypress:ci:ep2TestSpec",
+    "cypress:ci:local:win": "set CYPRESS_REMOTE_DEBUGGING_PORT=9222 && yarn run cypress:ci:testSpec && yarn run cypress:ci:ep2TestSpec",
     "cypress:version": "cypress -v",
     "cypress:open": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress open",
     "cypress:open:win": "set CYPRESS_REMOTE_DEBUGGING_PORT=9222 && cypress open",
