--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "start": "react-scripts start",
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "serve": "serve -s build",
-    "deploy": "DISABLE_ESLINT_PLUGIN=true yarn build && cp _headers ./build && cp _redirects ./build && rm ./build/airdrops/testing",
+    "deploy": "DISABLE_ESLINT_PLUGIN=true yarn build && cp _headers ./build && cp _redirects ./build && rm -rf ./build/airdrops/testing",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cypress:ci:all": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome",
