--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -23,6 +23,6 @@ jobs:
         uses: browser-actions/setup-chrome@latest
       - run: chrome --version
       - run: yarn install
-      - run: yarn build
+      - run: yarn build:testing
       - run: yarn serve -l 3000 &
       - run: yarn cypress:ci
