--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "REACT_APP_STAGE=testing react-scripts start",
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "build:testing": "REACT_APP_STAGE=testing yarn build",
     "serve": "serve -s build",
     "deploy": "DISABLE_ESLINT_PLUGIN=true yarn build && cp _headers ./build && cp _redirects ./build && rm -rf ./build/airdrops/testing",
     "test": "react-scripts test",
@@ -46,7 +47,7 @@
     "cypress:ci:all": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome",
     "cypress:ci:testSpec": "yarn run cypress:ci:all --spec ./cypress/integration/testSpec.spec.js",
     "cypress:ci:ep2TestSpec": "yarn run cypress:ci:all --spec ./cypress/integration/ep2TestSpec.spec.js",
-    "cypress:ci": "yarn run cypress:ci:testSpec --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de",
+    "cypress:ci": "yarn run cypress:ci:testSpec --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de && yarn run cypress:ci:ep2TestSpec --record --key 460c115f-3fdb-4fd4-b4a1-23def2b9a3de",
     "cypress:ci:local": "yarn run cypress:ci:testSpec && yarn run cypress:ci:ep2TestSpec",
     "cypress:ci:local:win": "set CYPRESS_REMOTE_DEBUGGING_PORT=9222 && cypress run --headed --browser chrome --spec ./cypress/integration/testSpec.spec.js",
     "cypress:version": "cypress -v",
