--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@portis/web3": "4.0.5",
     "@sentry/react": "6.14.1",
     "@sentry/tracing": "6.14.1",
-    "@snapshot-labs/snapshot.js": "0.2.9",
+    "@snapshot-labs/snapshot.js": "^0.9.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
