--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "react-use": "17.3.1",
     "styled-components": "5.3.3",
     "walletlink": "2.1.11",
-    "web-vitals": "^1.0.1",
-    "wrtc": "^0.4.7"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "REACT_APP_STAGE=testing react-scripts start",
