--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "cypress": "8.7.0",
     "cypress-promise": "1.1.0",
     "eslint-config-react-app": "6.0.0",
+    "ethereumjs-util": "^7.1.5",
     "husky": "^7.0.0",
     "node-fetch": "^3.1.0",
     "prettier": "2.4.1",
