--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@testing-library/user-event": "^12.1.10",
     "@toruslabs/torus-embed": "1.13.3",
     "@walletconnect/web3-provider": "1.6.5",
+    "@web3modal/ethers5": "^3.5.6",
     "bitski": "^0.11.0-beta.5",
-    "ethers": "5.4.6",
+    "ethers": "5.7.2",
     "graphql": "15.5.3",
     "js-sha3": "0.8.0",
     "keccak256": "1.0.3",
@@ -29,7 +30,7 @@
     "react-confetti": "6.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-use": "17.3.1",
     "styled-components": "5.3.3",
     "walletlink": "2.1.11",
