--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "fs-extra": "^10.0.0",
     "graphql": "15.5.3",
     "html-webpack-plugin": "^5.5.0",
+    "https-browserify": "^1.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
@@ -52,17 +53,19 @@
     "lodash.debounce": "4.0.8",
     "merkletreejs": "0.2.24",
     "mini-css-extract-plugin": "^2.4.5",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-confetti": "6.0.1",
     "react-dev-utils": "^12.0.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "5.3.0",
     "react-use": "17.3.1",
@@ -71,6 +74,7 @@
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
+    "stream-http": "^3.2.0",
     "style-loader": "^3.3.1",
     "styled-components": "5.3.3",
     "tailwindcss": "^3.0.2",
