--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     ]
   },
   "devDependencies": {
-    "@ensdomains/cypress-metamask": "ensdomains/cypress-metamask#fix-sign-buttons",
+    "@ensdomains/cypress-metamask": "ensdomains/cypress-metamask#main",
     "babel-plugin-styled-components": "1.13.2",
     "concurrently": "6.3.0",
     "cypress": "8.7.0",
