--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -21,6 +21,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install chrome
         uses: browser-actions/setup-chrome@latest
+        with:
+          chrome-version: 120
       - run: chrome --version
       - run: yarn install
       - run: yarn build:testing
